@@ -4,6 +4,7 @@
 - Move playback timer to the status bar where it is less intrusive
 - Fix reverting to default output when custom output port is not found
 - Fixed importing drum tracks from midi (would result in a graphical glitch)
+- Fixed potential crash when editing song while recording is activated
 - Other minor improvements to printing
 
 1.3 beta 3
